istio/networking/virtual-service-weighted.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ib-frontend-service
spec:
  hosts:
    - ib-frontend-service
  http:
  - route:
    - destination:
        host: ib-frontend-service
        subset: v1
      weight: 50
    - destination:
        host: ib-frontend-service
        subset: v2
      weight: 50
